--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,28 @@ body {
 	justify-content: center;
 	background-color: lightblue;
 }
+.gameWindow {
+	display: flex;
+	flex-direction: column;
+}
+header {
+	display: flex;
+	flex-direction: row;
+	min-height: 100px;
+	min-width: 600px;
+	border: 1.5px solid grey;
+}
 
-.tomagotchi {
+#tamagotchiTank {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	min-height: 400px;
+	min-width: 600px;
+	border: 1.5px solid grey;
+}
+
+.tamagotchi {
 	background-color: yellowgreen;
 	height: 100px;
 	width: 100px;
