created name form and input. now console logs input name

--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,17 @@ body {
 #infoBox {
 	display: flex;
 	flex-direction: column;
-	align-content: center;
+	align-content: space-between;
 	min-height: 100px;
 	min-width: 600px;
 	border: 1.5px solid grey;
+}
+
+.gameInfo {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	align-content: space-evenly;
 }
 
 #tamagotchiTank {
