--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ body {
 #infoBox {
 	display: flex;
 	flex-direction: column;
-	align-content: flex-end;
+	justify-content: center;
+	align-items: center;
 	min-height: 100px;
 	min-width: 600px;
 	border: 1.5px solid grey;
@@ -21,12 +22,14 @@ body {
 	display: flex;
 	flex-direction: row;
 	width: 100%;
-	align-content: space-around;
+	justify-content: center;
+	align-items: baseline;
 }
 
 #tamagotchiTank {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
 	align-items: center;
 	min-height: 400px;
 	min-width: 600px;
@@ -40,9 +43,6 @@ body {
 	border-radius: 75%;
 }
 
-h2 {
-	text-align: center;
-}
 
 span {
 	width:148px;
