improved face of tamagotchi

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ body {
 
 .tamagotchi {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	font-family: 'Bad Script', cursive;
