--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
 
 #tamagotchiTank {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	min-height: 400px;
@@ -43,20 +43,25 @@ body {
 	align-items: center;
 	font-family: 'Bad Script', cursive;
 	background-color: yellowgreen;
-	height: 100px;
-	width: 100px;
+	height: 150px;
+	width: 150px;
 	border-radius: 50%;
 }
 
 .eyes {
-	/*margin-top: 100px;*/
 	font-size: 30px;
 	
 }
 
+
 .mouth {
 	font-size: 30px;
 	transform: rotate(90deg);
+}
+
+#food{
+	font-size: 20px;
+	margin-left: 200px;
 }
 
 span {
