--- a/css/style.css
+++ b/css/style.css
@@ -46,15 +46,30 @@ body {
 	height: 150px;
 	width: 150px;
 	border-radius: 50%;
+	i
+  	animation: beat 1s ease 0s infinite alternate
+  
+  
+	@keyframes beat
+	  0%
+	    transform: scale(1.1)
+	  25%
+	    transform: scale(0.9)
+	  50%
+	    transform: scale(1.2)
+	  75%
+	    transform: scale(1.1)
+	  100%
+	    transform: scale(1.0)
 }
 
-.eyes {
+#eyes {
 	font-size: 30px;
 	
 }
 
 
-.mouth {
+#mouth {
 	font-size: 30px;
 	transform: rotate(90deg);
 }
